<resources>
    <string name="app_name">Google News</string>
    <string name="top_image">Top Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Category name for phrases [CHAR LIMIT=20] -->
    <string name="category_first">Sports</string>

    <!-- Category name for the vocabulary words for colors [CHAR LIMIT=20] -->
    <string name="category_second">Science</string>

    <!-- Category name for the vocabulary words for numbers [CHAR LIMIT=20] -->
    <string name="category_third">Health</string>
    <string name="cardImage">cardImage</string>
    <string name="api_key">aeb8da21db0e425c928bbcaff4341209</string>
    <string name="open_in_browser">Open in Browser</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="save">save</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="new_app">News App</string>
    <string name="category">Category</string>
    <string name="news_image">News Image</string>
    <string name="main_card_image">Main Card Image</string>
</resources>