<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SaveActivity"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#15202B"
    android:gravity="center">

    <EditText
        android:id="@+id/name_edit_Text"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/enter_your_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:autofillHints="name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/email_edit_text"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/enter_your_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"/>

    <Button
        android:id="@+id/btn_log"
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"/>

    <TextView
        android:id="@+id/name_text"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/name"
        android:gravity="center"
        android:padding="16dp"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/email_text"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/email"
        android:gravity="center"
        android:padding="16dp"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>